update for pilot

--- a/annotation/climate_sources/templates/template.html
+++ b/annotation/climate_sources/templates/template.html
@@ -136,7 +136,10 @@ ul.likert{
         <input type="radio" id="yes" name="cite" value="Yes" />
         <label for="yes">Yes. I have corrected details where necessary.</label>
       </div>
-
+      <div>
+        <input type="radio" id="yes-dup" name="cite" value="Yes-Dup" />
+        <label for="yes-dup">Yes, but it's redundant/a duplicate of another source in the list</label>
+      </div>
       <div>
         <input type="radio" id="no" name="cite" value="no" />
         <label for="no">No</label>
