--- a/annotation/climate_sources/templates/template.html
+++ b/annotation/climate_sources/templates/template.html
@@ -138,7 +138,7 @@ ul.likert{
       </div>
       <div>
         <input type="radio" id="yes-dup" name="cite" value="Yes-Dup" />
-        <label for="yes-dup">Yes, but it's redundant/a duplicate of another source in the list</label>
+        <label for="yes-dup">Yes, but it's redundant/duplicate of another source.</label>
       </div>
       <div>
         <input type="radio" id="no" name="cite" value="no" />
